@@ -11,6 +11,7 @@
 ##
 
 - Fixed a bug where hashcat is suppressing --machine-readable output in the final status update
+- Fixed a bug where hashcat did not check the return of realpath() and crashes uncontrolled if the path does not exist
 
 * changes v2.01 -> v3.00:
 
